# Project-Task-Timer

./: .gitignore  Cargo.toml
src/: 2  ;  app.rs  config.rs  log_type.rs  main.rs  node.rs  traits.rs
src/components/: log_view.rs  main_view.rs  mod.rs  session_manager.rs  window.rs
src/components/popups/: popup.rs
src/components/views/: controls.rs
src/components/views/log/: filter.rs  log_view.rs  subfilter.rs  time_stamp.rs
src/components/views/task_view/: mod.rs  task.rs  task_view.rs  tasks.rs
src/events/: events.rs  mod.rs
src/file_watcher/: file_info.rs  file_watcher.rs  mod.rs
src/markdown_serialiser/: markdown_serialiser.rs  mod.rs
src/task_timer/: control_view.rs  info_subtype.rs  log_type.rs  logger.rs  markdown_view.rs  mod.rs  node.rs  popup.rs  session_manager.rs  time_stamp.rs  timer_view.rs  traits.rs  window.rs
src/task_timer/nary_tree/: node.rs
src/task_timer/popups/: mod.rs  popup.rs  render.rs
src/task_timer/views/: controls.rs  logger.rs  mod.rs  paginator.rs  task_status.rs  tasks.rs  timers.rs
src/task_timer/views/home/: main_view.rs  mod.rs  navigation_bar.rs  tasks.rs  tasks_overview.rs  timers.rs
src/task_timer/views/log/: filter.rs  log_type.rs  log_view.rs  mod.rs  subfilter.rs
src/task_timer/views/task_view/: mod.rs  task_view.rs  tasks.rs  timers.rs
