[package]
name = "unnamed"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "8.0.0"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["serde"] }
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27"
strum_macros = "0.27"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
